@@ -6,149 +6,107 @@ import com.thirdexploration.promengine.memory.config.MemoryMetadataRegistry;
 import com.thirdexploration.promengine.memory.model.MemoryEntry;
 import com.thirdexploration.promengine.memory.model.MemoryRecord;
 import com.thirdexploration.promengine.memory.model.Provenance;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
+import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.Instant;
 import java.util.*;
+import java.util.stream.Collectors;
 
+/**
+ * 语义记忆服务，存储抽象化、概念化知识。
+ * 优化：使用 NamedParameterJdbcTemplate，支持分页查询、批量更新、完善的空值处理。
+ */
 @Slf4j
 @Service
-//@RequiredArgsConstructor
 public class SemanticMemoryService {
 
     private final JdbcTemplate jdbcTemplate;
+    private final NamedParameterJdbcTemplate namedJdbcTemplate;
     private final ObjectMapper objectMapper;
     private final MemoryMetadataRegistry registry;
     private final VectorStorage vectorStorage;
-    // 非必需依赖，当图谱功能未启用时可以为 null
+
     @Autowired(required = false)
-    private  Neo4jGraphService graphService; // 可能为 null
-    // 显式构造器，只注入必需依赖
+    private Neo4jGraphService graphService; // 可选依赖
+
+    // 构造器注入（必需依赖）
     public SemanticMemoryService(JdbcTemplate jdbcTemplate,
                                  ObjectMapper objectMapper,
                                  MemoryMetadataRegistry registry,
                                  VectorStorage vectorStorage) {
         this.jdbcTemplate = jdbcTemplate;
+        this.namedJdbcTemplate = new NamedParameterJdbcTemplate(jdbcTemplate);
         this.objectMapper = objectMapper;
         this.registry = registry;
         this.vectorStorage = vectorStorage;
     }
 
-    public List<MemoryRecord> semanticSearch(String queryText, int topK) {
-        if (vectorStorage == null) return List.of();
-        List<VectorStorage.SearchHit> hits = vectorStorage.searchByText(queryText, topK);
-        return hits.stream()
-                .map(hit -> findById(hit.id()))
-                .filter(Objects::nonNull)
-                .toList();
-    }
-    public void updateScores(String id, double utilityScore, double safetyScore) {
-        String sql = "UPDATE semantic_memory SET utility_score = ?, safety_score = ? WHERE id = ?";
-        jdbcTemplate.update(sql, utilityScore, safetyScore, id);
-        log.debug("Updated scores for semantic memory: id={}", id);
-    }
-
+    // ---------- SQL 常量 ----------
     private static final String INSERT_SQL = """
             INSERT INTO semantic_memory
             (id, user_id, content, summary, timestamp, memory_type, importance,
              metadata, domain, project_id, strength, layer, utility_score,
-             safety_score, sharing_level, provenance, retrieval_count, vector_id, session_id,created_at)
-            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?,?)
+             safety_score, sharing_level, provenance, retrieval_count, vector_id,
+             session_id, created_at)
+            VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
             """;
 
-    private static final String SELECT_BY_ID = """
-            SELECT * FROM semantic_memory WHERE id = ? AND deleted = 0
-            """;
-
-    private static final String SELECT_BY_IDS = """
-            SELECT * FROM semantic_memory WHERE id IN (%s) AND deleted = 0
-            """;
-
-    private static final String UPDATE_STRENGTH = """
-            UPDATE semantic_memory SET strength = ? WHERE id = ?
-            """;
-
-    private static final String SOFT_DELETE = """
-            UPDATE semantic_memory SET deleted = 1, deleted_at = ? WHERE id = ?
-            """;
-
-    private static final String HARD_DELETE = "DELETE FROM semantic_memory WHERE id = ?";
-
-    // 统计 SQL
+    private static final String SELECT_BY_ID = "SELECT * FROM semantic_memory WHERE id = :id AND deleted = 0";
+    private static final String SELECT_BY_IDS = "SELECT * FROM semantic_memory WHERE id IN (:ids) AND deleted = 0";
+    private static final String UPDATE_STRENGTH = "UPDATE semantic_memory SET strength = :strength WHERE id = :id";
+    private static final String UPDATE_SCORES = "UPDATE semantic_memory SET utility_score = :utility, safety_score = :safety WHERE id = :id";
+    private static final String SOFT_DELETE = "UPDATE semantic_memory SET deleted = 1, deleted_at = :now WHERE id = :id";
+    private static final String HARD_DELETE = "DELETE FROM semantic_memory WHERE id = :id";
     private static final String COUNT_ALL = "SELECT COUNT(*) FROM semantic_memory WHERE deleted = 0";
-    private static final String COUNT_BY_USER = "SELECT COUNT(*) FROM semantic_memory WHERE user_id = ? AND deleted = 0";
+    private static final String COUNT_BY_USER = "SELECT COUNT(*) FROM semantic_memory WHERE user_id = :userId AND deleted = 0";
+    private static final String GET_ALL_IDS = "SELECT id FROM semantic_memory WHERE deleted = 0 ORDER BY id LIMIT :limit OFFSET :offset";
 
+    // ---------- 语义检索 ----------
 
-
-    /**
-     * 分页关键词查询（用于前端记忆列表展示）
-     */
-    public record PageResult<T>(List<T> data, long total) {}
-
-    public PageResult<MemoryEntry> findByKeywordAndPage(String keyword, int page, int size) {
-        StringBuilder countSql = new StringBuilder("SELECT COUNT(*) FROM semantic_memory WHERE deleted = 0 ");
-        StringBuilder dataSql = new StringBuilder("SELECT * FROM semantic_memory WHERE deleted = 0 ");
-
-        List<Object> params = new ArrayList<>();
-
-        if (keyword != null && !keyword.isBlank()) {
-            String like = "%" + keyword + "%";
-            String where = " AND (content LIKE ? OR summary LIKE ?) ";
-            countSql.append(where);
-            dataSql.append(where);
-            params.add(like);
-            params.add(like);
+    @Transactional(readOnly = true)
+    public List<MemoryRecord> semanticSearch(String queryText, int topK) {
+        if (vectorStorage == null || queryText == null || queryText.isBlank()) {
+            return List.of();
         }
-
-        long total = jdbcTemplate.queryForObject(countSql.toString(), Long.class, params.toArray());
-
-        dataSql.append(" ORDER BY timestamp DESC LIMIT ? OFFSET ?");
-        int offset = (page - 1) * size;
-        params.add(size);
-        params.add(offset);
-
-        List<MemoryRecord> data = jdbcTemplate.query(dataSql.toString(), new SemanticRowMapper(objectMapper), params.toArray());
-        List<MemoryEntry> list = data.stream().map(r -> MemoryEntry.builder()
-                .id(r.getId())
-                .userId(r.getUserId())
-                .content(r.getContent())
-                .summary(r.getSummary())
-                .timestamp(r.getTimestamp())
-                .memoryType(r.getMemoryType())
-                .importance(r.getImportance())
-                .domain(r.getDomain())
-                .layer(r.getLayer())
-                .strength(r.getStrength())
-                .sharingLevel(r.getSharingLevel())
-                .metadata(r.getMetadata())
-                .build()
-        ).toList();
-
-        return new PageResult<>(list, total);
+        List<VectorStorage.SearchHit> hits = vectorStorage.searchByText(queryText, topK);
+        if (hits.isEmpty()) return List.of();
+        List<String> ids = hits.stream().map(VectorStorage.SearchHit::id).collect(Collectors.toList());
+        return findByIds(ids);
     }
+
+    @Transactional(readOnly = true)
+    public List<MemoryRecord> semanticSearch(float[] queryVector, int topK) {
+        if (vectorStorage == null || queryVector == null || queryVector.length == 0) {
+            return List.of();
+        }
+        List<VectorStorage.SearchHit> hits = vectorStorage.search(queryVector, topK);
+        if (hits.isEmpty()) return List.of();
+        List<String> ids = hits.stream().map(VectorStorage.SearchHit::id).collect(Collectors.toList());
+        return findByIds(ids);
+    }
+
+    // ---------- 写操作 ----------
 
     @Transactional
     public void store(MemoryRecord record) {
-        if (record.getId() == null) record.setId(generateId());
-        record.setLayer("semantic");
-        if (record.getDomain() == null) record.setDomain(registry.getDefaultDomain());
-        if (record.getSharingLevel() == null) record.setSharingLevel(registry.getDefaultSharingLevel());
-
+        ensureDefaults(record);
         try {
             String vectorId = null;
-            if (vectorStorage != null && record.getVector() != null) {
+            if (vectorStorage != null && record.getVector() != null && record.getVector().length > 0) {
                 vectorId = record.getId();
                 vectorStorage.add(vectorId, record.getVector(), objectMapper.writeValueAsString(record.getMetadata()));
             }
-
             jdbcTemplate.update(INSERT_SQL,
                     record.getId(),
                     record.getUserId(),
@@ -168,11 +126,9 @@ public class SemanticMemoryService {
                     objectMapper.writeValueAsString(record.getProvenance()),
                     record.getRetrievalCount(),
                     vectorId,
-                    record.getSessionId()   // 仅存储，不用于检索过滤
-                    ,
-                    System.currentTimeMillis()   // created_at
+                    record.getSessionId(),
+                    System.currentTimeMillis()
             );
-
             if (graphService != null) graphService.upsertMemoryNode(record);
             log.debug("Stored semantic memory: id={}", record.getId());
         } catch (Exception e) {
@@ -183,16 +139,13 @@ public class SemanticMemoryService {
 
     @Transactional
     public void batchStore(List<MemoryRecord> records) {
-        List<Object[]> batchArgs = new ArrayList<>();
+        if (CollectionUtils.isEmpty(records)) return;
+        List<Object[]> batchArgs = new ArrayList<>(records.size());
         for (MemoryRecord rec : records) {
-            if (rec.getId() == null) rec.setId(generateId());
-            rec.setLayer("semantic");
-            if (rec.getDomain() == null) rec.setDomain(registry.getDefaultDomain());
-            if (rec.getSharingLevel() == null) rec.setSharingLevel(registry.getDefaultSharingLevel());
-
+            ensureDefaults(rec);
             try {
                 String vectorId = null;
-                if (vectorStorage != null && rec.getVector() != null) {
+                if (vectorStorage != null && rec.getVector() != null && rec.getVector().length > 0) {
                     vectorId = rec.getId();
                     vectorStorage.add(vectorId, rec.getVector(), objectMapper.writeValueAsString(rec.getMetadata()));
                 }
@@ -203,7 +156,7 @@ public class SemanticMemoryService {
                         rec.getProjectId(), rec.getStrength(), rec.getLayer(),
                         rec.getUtilityScore(), rec.getSafetyScore(), rec.getSharingLevel(),
                         objectMapper.writeValueAsString(rec.getProvenance()), rec.getRetrievalCount(),
-                        vectorId, rec.getSessionId()
+                        vectorId, rec.getSessionId(), System.currentTimeMillis()
                 });
             } catch (Exception e) {
                 log.warn("Skipping record {} due to serialization error", rec.getId(), e);
@@ -215,64 +168,175 @@ public class SemanticMemoryService {
         }
     }
 
-    public List<MemoryRecord> semanticSearch(float[] queryVector, int topK) {
-        if (vectorStorage == null || queryVector == null) return List.of();
-        List<VectorStorage.SearchHit> hits = vectorStorage.search(queryVector, topK);
-        if (hits.isEmpty()) return List.of();
-        List<String> ids = hits.stream().map(VectorStorage.SearchHit::id).toList();
-        return findByIds(ids);
+    // ---------- 批量更新强度（供 ForgettingCurveDecayer 使用）----------
+    @Transactional
+    public void batchUpdateStrengths(List<MemoryRecord> records) {
+        if (CollectionUtils.isEmpty(records)) return;
+        String sql = "UPDATE semantic_memory SET strength = :strength WHERE id = :id";
+        MapSqlParameterSource[] batch = records.stream()
+                .map(r -> new MapSqlParameterSource()
+                        .addValue("strength", r.getStrength())
+                        .addValue("id", r.getId()))
+                .toArray(MapSqlParameterSource[]::new);
+        namedJdbcTemplate.batchUpdate(sql, batch);
+        log.debug("Batch updated strengths for {} semantic memories", records.size());
     }
 
+    // ---------- 查询操作 ----------
+
+    @Transactional(readOnly = true)
     public MemoryRecord findById(String id) {
         try {
-            return jdbcTemplate.queryForObject(SELECT_BY_ID, new SemanticRowMapper(objectMapper), id);
-        } catch (Exception e) {
+            MapSqlParameterSource params = new MapSqlParameterSource("id", id);
+            return namedJdbcTemplate.queryForObject(SELECT_BY_ID, params, new SemanticRowMapper(objectMapper));
+        } catch (DataAccessException e) {
+            log.debug("Semantic memory not found by id: {}", id);
             return null;
         }
     }
 
+    @Transactional(readOnly = true)
     public List<MemoryRecord> findByIds(List<String> ids) {
-        if (ids.isEmpty()) return List.of();
-        String inClause = String.join(",", ids.stream().map(id -> "'" + id + "'").toList());
-        String sql = String.format(SELECT_BY_IDS, inClause);
-        return jdbcTemplate.query(sql, new SemanticRowMapper(objectMapper));
+        if (CollectionUtils.isEmpty(ids)) return List.of();
+        MapSqlParameterSource params = new MapSqlParameterSource("ids", ids);
+        return namedJdbcTemplate.query(SELECT_BY_IDS, params, new SemanticRowMapper(objectMapper));
     }
 
+    /**
+     * 分页获取所有活跃 ID（供遗忘曲线衰减器使用）
+     */
+    @Transactional(readOnly = true)
+    public List<String> getAllIdsPaginated(int page, int size) {
+        int offset = page * size;
+        MapSqlParameterSource params = new MapSqlParameterSource()
+                .addValue("limit", size)
+                .addValue("offset", offset);
+        return namedJdbcTemplate.queryForList(GET_ALL_IDS, params, String.class);
+    }
+
+    /**
+     * 获取所有 ID（不推荐大表使用，建议使用分页版本）
+     */
+    @Transactional(readOnly = true)
     public List<String> getAllIds() {
         String sql = "SELECT id FROM semantic_memory WHERE deleted = 0";
         return jdbcTemplate.queryForList(sql, String.class);
     }
 
+    @Transactional(readOnly = true)
+    public PageResult<MemoryEntry> findByKeywordAndPage(String keyword, int page, int size) {
+        StringBuilder countSql = new StringBuilder("SELECT COUNT(*) FROM semantic_memory WHERE deleted = 0");
+        StringBuilder dataSql = new StringBuilder("SELECT * FROM semantic_memory WHERE deleted = 0");
+        List<Object> params = new ArrayList<>();
+
+        if (keyword != null && !keyword.isBlank()) {
+            String like = "%" + keyword + "%";
+            countSql.append(" AND (content LIKE ? OR summary LIKE ?)");
+            dataSql.append(" AND (content LIKE ? OR summary LIKE ?)");
+            params.add(like);
+            params.add(like);
+        }
+
+        long total = jdbcTemplate.queryForObject(countSql.toString(), Long.class, params.toArray());
+        int offset = (page - 1) * size;
+        dataSql.append(" ORDER BY timestamp DESC LIMIT ? OFFSET ?");
+        params.add(size);
+        params.add(offset);
+
+        List<MemoryRecord> records = jdbcTemplate.query(dataSql.toString(), new SemanticRowMapper(objectMapper), params.toArray());
+        List<MemoryEntry> entries = records.stream()
+                .map(r -> MemoryEntry.builder()
+                        .id(r.getId())
+                        .userId(r.getUserId())
+                        .content(r.getContent())
+                        .summary(r.getSummary())
+                        .timestamp(r.getTimestamp())
+                        .memoryType(r.getMemoryType())
+                        .importance(r.getImportance())
+                        .domain(r.getDomain())
+                        .layer(r.getLayer())
+                        .strength(r.getStrength())
+                        .sharingLevel(r.getSharingLevel())
+                        .metadata(r.getMetadata())
+                        .build())
+                .collect(Collectors.toList());
+        return new PageResult<>(entries, total);
+    }
+
+    // ---------- 更新与删除 ----------
+
+    @Transactional
     public void updateStrength(String id, float newStrength) {
-        jdbcTemplate.update(UPDATE_STRENGTH, newStrength, id);
+        MapSqlParameterSource params = new MapSqlParameterSource()
+                .addValue("strength", newStrength)
+                .addValue("id", id);
+        namedJdbcTemplate.update(UPDATE_STRENGTH, params);
     }
 
+    @Transactional
+    public void updateScores(String id, double utilityScore, double safetyScore) {
+        MapSqlParameterSource params = new MapSqlParameterSource()
+                .addValue("utility", utilityScore)
+                .addValue("safety", safetyScore)
+                .addValue("id", id);
+        namedJdbcTemplate.update(UPDATE_SCORES, params);
+    }
+
+    @Transactional
     public void softDelete(String id) {
-        jdbcTemplate.update(SOFT_DELETE, System.currentTimeMillis(), id);
+        MapSqlParameterSource params = new MapSqlParameterSource()
+                .addValue("now", System.currentTimeMillis())
+                .addValue("id", id);
+        namedJdbcTemplate.update(SOFT_DELETE, params);
         if (vectorStorage != null) vectorStorage.delete(id);
         if (graphService != null) graphService.deleteMemoryNode(id);
     }
 
+    @Transactional
     public void hardDelete(String id) {
-        jdbcTemplate.update(HARD_DELETE, id);
+        MapSqlParameterSource params = new MapSqlParameterSource("id", id);
+        namedJdbcTemplate.update(HARD_DELETE, params);
         if (vectorStorage != null) vectorStorage.delete(id);
         if (graphService != null) graphService.deleteMemoryNode(id);
     }
 
-    // ---------- 统计方法 ----------
+    // ---------- 统计 ----------
+
+    @Transactional(readOnly = true)
     public long countAll() {
         Long count = jdbcTemplate.queryForObject(COUNT_ALL, Long.class);
         return count != null ? count : 0L;
     }
 
+    @Transactional(readOnly = true)
     public long countByUser(String userId) {
-        Long count = jdbcTemplate.queryForObject(COUNT_BY_USER, Long.class, userId);
+        MapSqlParameterSource params = new MapSqlParameterSource("userId", userId);
+        Long count = namedJdbcTemplate.queryForObject(COUNT_BY_USER, params, Long.class);
         return count != null ? count : 0L;
+    }
+
+    // ---------- 私有辅助 ----------
+
+    private void ensureDefaults(MemoryRecord record) {
+        if (record.getId() == null) record.setId(generateId());
+        if (record.getLayer() == null) record.setLayer("semantic");
+        if (record.getTimestamp() == null) record.setTimestamp(Instant.now());
+        if (record.getDomain() == null) record.setDomain(registry.getDefaultDomain());
+        if (record.getSharingLevel() == null) record.setSharingLevel(registry.getDefaultSharingLevel());
+        if (record.getMetadata() == null) record.setMetadata(new HashMap<>());
+        if (record.getProvenance() == null) {
+            record.setProvenance(Provenance.userInput(record.getUserId()));
+        }
+        if (record.getStrength() == 0.0) record.setStrength(1.0);
+        if (record.getUtilityScore() == 0.0) record.setUtilityScore(0.5);
+        if (record.getSafetyScore() == 0.0) record.setSafetyScore(0.9);
     }
 
     private String generateId() {
         return "sem_" + UUID.randomUUID().toString().replace("-", "");
     }
+
+    // ---------- 内部类 ----------
 
     private static class SemanticRowMapper implements RowMapper<MemoryRecord> {
         private final ObjectMapper objectMapper;
@@ -282,7 +346,7 @@ public class SemanticMemoryService {
         public MemoryRecord mapRow(ResultSet rs, int rowNum) throws SQLException {
             try {
                 Map<String, Object> metadata = objectMapper.readValue(
-                        rs.getString("metadata"), new TypeReference<Map<String, Object>>() {});
+                        rs.getString("metadata"), new TypeReference<>() {});
                 Provenance provenance = rs.getString("provenance") != null
                         ? objectMapper.readValue(rs.getString("provenance"), Provenance.class) : null;
 
@@ -297,10 +361,10 @@ public class SemanticMemoryService {
                         .metadata(metadata)
                         .domain(rs.getString("domain"))
                         .projectId(rs.getString("project_id"))
-                        .strength(rs.getFloat("strength"))
+                        .strength(rs.getDouble("strength"))
                         .layer(rs.getString("layer"))
-                        .utilityScore(rs.getFloat("utility_score"))
-                        .safetyScore(rs.getFloat("safety_score"))
+                        .utilityScore(rs.getDouble("utility_score"))
+                        .safetyScore(rs.getDouble("safety_score"))
                         .sharingLevel(rs.getString("sharing_level"))
                         .provenance(provenance)
                         .retrievalCount(rs.getInt("retrieval_count"))
@@ -311,4 +375,7 @@ public class SemanticMemoryService {
             }
         }
     }
+
+    // ---------- 结果包装 ----------
+    public record PageResult<T>(List<T> data, long total) {}
 }
